fix: change button structure and style to prevent jumping

--- a/src/components/HotelTile/TileSelectionButton/TileSelectionButton.module.css
+++ b/src/components/HotelTile/TileSelectionButton/TileSelectionButton.module.css
@@ -1,6 +1,5 @@
 .tile__selection-button {
   width: 100%;
-  padding: 0.6rem;
   border: 1px solid #89375f;
   border-radius: 6px;
   background-color: #ffffff;
@@ -10,28 +9,39 @@
 
   cursor: pointer;
 
-  transition: box-shadow 0.05s;
+  transition: background-color 0.1s ease, color 0.1s ease, opacity 0.1s ease;
 }
 
 .tile__selection-button--selected {
-  display: grid;
-  grid-template-columns: 2rem 8rem;
-  gap: 0.5rem;
-  justify-content: center;
-  border: 1px solid #ffffff;
   background-color: #89375f;
   color: #ffffff !important;
 }
 
-.tile__selection-button__icon {
-  justify-self: end;
-  content: url("../../../../public/icons/icon-check.svg");
-  height: 1.5rem;
-  width: 1.5rem;
+.tile__selection-button__icon-text{
+  display: grid;
+  justify-content: center;
+  gap: 0.4rem;
+  grid-template-columns: repeat(3,33%);
+  grid-template-rows: 2.5rem;
 }
+
+.tile__selection-button__icon {
+  width: 1.5rem;
+  height: 1.5rem;
+  content: url("../../../../public/icons/icon-check.svg");
+  justify-self: right;
+  opacity: 0;
+}
+
+.tile__selection-button__icon--selected{
+  opacity: 1;
+  align-self: center;
+}
+
 .tile__selection-button__label {
+  margin-bottom: 2px;
   justify-self: left;
-  margin-top: 2px;
+  align-self: center;
 }
 
 .tile__selection-button:hover {
@@ -56,8 +66,8 @@
   .tile__selection-button--selected {
     height: 2.7rem;
     padding: 0.5rem !important;
-    display: grid;
-    grid-template-columns: 2rem 8rem;
+    /* display: grid;
+    grid-template-columns: 2rem 8rem; */
     border: 1px solid #ffffff;
     background-color: #89375f;
     color: #ffffff !important;
